tests/checker/ok/newtype_inherits_methods.can
Greeting = String

Unit => Program {
    Greeting("hello") -> Print
}
