tests/checker/fail/endomorphism_bare_type.can
Basket = String

Basket * String => Basket {
    Basket -> Joined(String)
}

Unit => Program {
    "a"
        -> Basket
        -> Basket("b")
        -> Print
}
